--- a/source/index.html
+++ b/source/index.html
@@ -2,14 +2,16 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Главная</title>
     <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
     <div class="container">
-      <header>
+      <header class="header">
           <div class="header__logo">
-              <h1 class="visually-hidden">Логотип компании</h1>
+              <span class="visually-hidden">Логотип компании</span>
               <!-- /.visually-hidden -->
               <a href="/">
                   <svg width="86" height="35" viewBox="0 0 86 35" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -70,35 +72,32 @@
           </div>
           <!-- /.header__nav -->
       </header>
+      <!-- /.header -->
 
       <main>
           <div class="main">
-              <h2 class="main__title">Милые штуки ручной работы для дома</h2>
+              <h1 class="main__title">Милые штуки <br> ручной <br>  работы для дома</h1>
               <!-- /.main__title -->
               <ul class="main__list">
-                  <li class="main__item">
-                      <a href="#" class="main__link link-main">
-                          Предметы интерьера
-                          <div class="link-main__image"></div>
-                          <!-- /.link-main__image -->
-                      </a>
-                  </li>
-                  <!-- /.main-item -->
-                  <li class="main__item">
-                      <a href="#" class="main__link link-main">
-                          Детские игрушки
-                          <div class="link-main__image"></div>
-                          <!-- /.link-main__image -->
-                      </a>
-                  </li>
-                  <!-- /.main-item -->
+                <li class="main__item">
+                  <a href="#" class="main__link link-main main__link--interior">
+                      Предметы <br> интерьера
+                  </a>
+                </li>
+                <!-- /.main-item -->
+              <li class="main__item">
+                <a href="#" class="main__link link-main main__link--toy">
+                    Детские <br> игрушки
+                </a>
+                </li>
+                <!-- /.main-item -->
               </ul>
               <!-- /.main__list -->
           </div>
           <!-- /.main -->
           <div class="popular">
-              <h3 class="popular-title">Вязаные корзинки</h3>
-              <!-- /.text__title -->
+              <h2 class="popular__title">Вязаные корзинки</h2>
+              <!-- /.popular__title -->
               <span>товар недели</span>
               <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх размерах.</p>
               <table class="popular__table">
@@ -115,37 +114,37 @@
                     <td>15 см</td>
                   </tr>
               </table>
-              <!-- /.popular__lists -->
-              <img width="216" height="315" src="img/index/triple-set-mobile.png" alt="Товар недели">
+              <!-- /.popular__table -->
+              <img width="260" height="315" src="img/index/triple-set-mobile.png" alt="Товар недели">
               <span class="price">Цена: 990 руб.</span>
               <button>заказать</button>
           </div>
           <!-- /.popular -->
           <div class="info">
-              <h3 class="info__title">Коротко о нас:</h3>
+              <h2 class="info__title">Коротко о нас:</h2>
               <!-- /.info__title -->
               <ul class="info__list">
-                  <li class="info__item">
+                  <li class="info__item info__item--flower">
                       Экологически чистые материалы
                   </li>
                   <!-- /.info__item -->
-                  <li class="info__item">
+                  <li class="info__item info__item--bill">
                       Скандинавский стиль по российской цене
                   </li>
                   <!-- /.info__item -->
-                  <li class="info__item">
+                  <li class="info__item info__item--heart">
                       Увеличивает лайки на фотографиях
                   </li>
                   <!-- /.info__item -->
-                  <li class="info__item">
+                  <li class="info__item info__item--ball">
                       Связано вручную с любовью и умилением
                   </li>
                   <!-- /.info__item -->
-                  <li class="info__item">
+                  <li class="info__item info__item--rocket">
                       Поддержка отечественного производителя
                   </li>
                   <!-- /.info__item -->
-                  <li class="info__item">
+                  <li class="info__item info__item--gift">
                       Поставляется в подарочной упаковке
                   </li>
                   <!-- /.info__item -->
@@ -154,7 +153,7 @@
           </div>
           <!-- /.info -->
           <div class="reviews">
-              <h3 class="reviews__title">Отзывы</h3>
+              <h2 class="reviews__title">Отзывы</h2>
               <!-- /.reviews__title -->
               <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
                   у популярных инстамамочек.
@@ -166,13 +165,13 @@
                   </div>
                   <!-- /.reviews__user -->
                   <div class="reviews__arrows">
-                      <button type="button" class="arrow__left arrow">
+                      <button type="button" class="reviews__arrow reviews__arrow--left">
                           <svg width="50" height="26" viewBox="0 0 50 26" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                               <path d="M50 11H7.7L15.8 2.8L13 0L0 13L13 26L15.8 23.2L7.7 15H50V11Z" fill="some-color"/>
                           </svg>
                       </button>
                       <!-- /.arrow__left -->
-                      <button type="button" class="arrow__right arrow">
+                      <button type="button" class="reviews__arrow reviews__arrow--right">
                           <svg width="50" height="26" viewBox="0 0 50 26" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                               <path d="M0 11H42.3L34.2 2.8L37 0L50 13L37 26L34.2 23.2L42.3 15H0V11Z" fill="some-color"/>
                           </svg>
@@ -180,35 +179,29 @@
                       <!-- /.arrow__right -->
                   </div>
                   <!-- /.reviews__arrows -->
-                  <a href="#">Написать</a>
+                  <a href="#" class="reviews__button">Написать</a>
           </div>
           <!-- /.reviews -->
           <div class="contact">
-              <h3 class="contact__title">Контакты</h3>
+              <h2 class="contact__title">Контакты</h2>
               <!-- /.contact__title -->
-              <ul class="contact__list">
-                  <li class="contact__item">
-                      <p>
-                          <span>e-mail:</span>
-                          <span>info@mimimishkashop.ru</span>
-                      </p>
-                  </li>
-                  <!-- /.contact__item -->
-                  <li class="contact__item">
-                      <p>
-                          <span>адрес:</span>
-                          <span>г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</span>
-                      </p>
-                  </li>
-                  <!-- /.contact__item -->
-              </ul>
-              <!-- /.contact__list -->
+              <table class="contact__table">
+                <tr>
+                  <td>e-mail:</td>
+                  <td>info@mimimishkashop.ru</td>
+                </tr>
+                <tr>
+                  <td>адрес:</td>
+                  <td>г. Санкт-Петербург <br> ул. Большая Конюшеннаяд. <br> 19/8, офис 101</td>
+                </tr>
+            </table>
+            <!-- /.popular__table -->
               <div class="contact__map">
                   <img width="320" height="454" src="img/index/map-mobile.jpg" alt="Карта местонахождения магазина">
                   <img width="67" height="100" src="img/index/map-pin.svg" alt="Метка на карте">
               </div>
               <!-- /.contact__map -->
-              <a href="form.html">Напишите нам</a>
+              <a href="form.html" class="contact__link">Напишите нам</a>
           </div>
           <!-- /.contact -->
       </main>
@@ -241,8 +234,9 @@
                   </li>
                   <!-- /.footer__item -->
               </ul>
-              <!-- /.social__list -->
-              <div class="copyright">
+              <!-- /.footer__list -->
+              <hr>
+              <div class="footer__copyright">
                   <b>Разработано</b>
                   <img width="27" height="34" src="img/index/htmlacademy.svg" alt="Логотип компании которая разработала сайт магазина">
               </div>
