--- a/source/catalog.html
+++ b/source/catalog.html
@@ -85,7 +85,7 @@
                           <img width="260" height="195" src="img/catalog/photo-1-mobile.png" alt="Зайчик-попрыгайчик">
                           <div class="link-catalog__card">
                             <!-- /.link-catalog__card -->
-                            <h3>Зайчик-попрыгайчик</h3>
+                            <h3 class="link-catalog__card-name">Зайчик-попрыгайчик</h3>
                             <span>Рост 30 см, вес 200 г</span>
                             <p class="link-catalog__card-price">
                               <b>1 200 руб.</b>
@@ -105,7 +105,7 @@
                         <img width="260" height="195" src="img/catalog/photo-2-mobile.png" alt="Зайчик-попрыгайчик">
                         <div class="link-catalog__card">
                           <!-- /.link-catalog__card -->
-                          <h3>Корзинка для белья</h3>
+                          <h3 class="link-catalog__card-name">Корзинка для белья</h3>
                           <span>Диаметр 15 см, высота 10 см</span>
                           <p class="link-catalog__card-price">
                             <b>690 руб.</b>
@@ -125,7 +125,7 @@
                         <img width="260" height="195" src="img/catalog/photo-3-mobile.png" alt="Зайчик-попрыгайчик">
                         <div class="link-catalog__card">
                           <!-- /.link-catalog__card -->
-                          <h3>Большая корзинка для игрушек</h3>
+                          <h3 class="link-catalog__card-name">Большая корзинка для игрушек</h3>
                           <span>Диаметр 30 см, высота 30 см</span>
                           <p class="link-catalog__card-price">
                             <b>1 500 руб.</b>
