--- a/source/form.html
+++ b/source/form.html
@@ -85,7 +85,7 @@
                         <p>Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
                         <fieldset class="form__filter filter-form">
                             <legend>тип</legend>
-                            <label for="filter-form__input">
+                            <label class="filter-form__input">
                                 <input type="radio" name="product-type" value="interior" checked>
                                 <span>Аксессуар для интерьера</span>
                             </label>
@@ -101,7 +101,7 @@
                     <div class="product__form-options product__form-color">
                         <fieldset class="form__filter filter-form">
                             <legend>Цвет</legend>
-                            <label for="filter-form__input">
+                            <label class="filter-form__input">
                                 <input type="checkbox" name="product-color" value="white" checked>
                                 <span>Белый</span>
                             </label>
@@ -157,14 +157,14 @@
                       <fieldset class="form__filter filter-form">
                         <legend class="filter-form__title">тел</legend>
                         <label class="filter-form__input">
-                          <input type="text" placeholder="+7 ХХХ ХХХ ХХ ХХ*" name="phone" id="phone">
+                          <input type="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" name="phone" id="phone">
                         </label>
                       </fieldset>
 
                       <fieldset class="form__filter filter-form">
                         <legend class="filter-form__title">E-mail</legend>
                         <label class="filter-form__input">
-                          <input type="text" placeholder="Ваш Email*" name="email" id="email">
+                          <input type="email" placeholder="Ваш Email*" name="email" id="email">
                         </label>
                       </fieldset>
 
