--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
           </div>
           <!-- /.main -->
           <div class="popular">
-              <h2 class="popular__title">Вязаные корзинки</h2>
+              <h2 class="popular__title block__title">Вязаные корзинки</h2>
               <!-- /.popular__title -->
               <span>товар недели</span>
               <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх размерах.</p>
@@ -121,7 +121,7 @@
           </div>
           <!-- /.popular -->
           <div class="info">
-              <h2 class="info__title">Коротко о нас:</h2>
+              <h2 class="info__title block__title">Коротко о нас:</h2>
               <!-- /.info__title -->
               <ul class="info__list">
                   <li class="info__item info__item--flower">
@@ -153,7 +153,7 @@
           </div>
           <!-- /.info -->
           <div class="reviews">
-              <h2 class="reviews__title">Отзывы</h2>
+              <h2 class="reviews__title block__title">Отзывы</h2>
               <!-- /.reviews__title -->
               <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
                   у популярных инстамамочек.
@@ -183,7 +183,7 @@
           </div>
           <!-- /.reviews -->
           <div class="contact">
-              <h2 class="contact__title">Контакты</h2>
+              <h2 class="contact__title block__title">Контакты</h2>
               <!-- /.contact__title -->
               <table class="contact__table">
                 <tr>
