--- a/source/catalog.html
+++ b/source/catalog.html
@@ -205,5 +205,21 @@
         </footer>
     </div>
     <!-- /.container -->
+    <div class="modal__container">
+      <div class="modal">
+        <div class="modal__title block__title">Добавить <br> в корзину</div>
+        <!-- /.modal__title -->
+        <p>Выберите размер:</p>
+        <div class="modal__size">
+          <button class="modal__size--active">S</button>
+          <button>M</button>
+          <button>L</button>
+        </div>
+        <!-- /.modal__size -->
+        <button class="modal__button">Добавить</button>
+      </div>
+      <!-- /.modal -->
+    </div>
+    <!-- /.modal__container -->
 </body>
 </html>
