--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Каталог</title>
-  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Каталог</title>
+    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
 <body>
     <div class="container">
         <header>
@@ -71,20 +74,20 @@
         </header>
         <main>
             <div class="main">
-                <h2 class="main__title">Каталог товаров</h2>
+                <h1 class="main__title main__title--background-grey">Каталог товаров</h1>
                 <!-- /.main__title -->
             </div>
             <!-- /.main -->
             <div class="catalog">
                 <ul class="catalog__list">
                     <li class="catalog__item">
-                        <div class="catalog__link link-catalog">
-                            <a href="#">
-                                <img width="260" height="195" src="img/catalog/photo-1-mobile.png" alt="Зайчик-попрыгайчик">
-                                <h3>Зайчик-попрыгайчик</h3>
-                            </a>
+                        <a href="#" class="catalog__link link-catalog">
+                          <img width="260" height="195" src="img/catalog/photo-1-mobile.png" alt="Зайчик-попрыгайчик">
+                          <div class="link-catalog__card">
+                            <!-- /.link-catalog__card -->
+                            <h3 class="link-catalog__card-name">Зайчик-попрыгайчик</h3>
                             <span>Рост 30 см, вес 200 г</span>
-                            <p class="link-catalog__price">
+                            <p class="link-catalog__card-price">
                               <b>1 200 руб.</b>
                               <button>
                                 <svg width="21" height="18" viewBox="0 0 21 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -92,46 +95,49 @@
                                 </svg>
                               </button>
                             </p>
-                        </div>
+                          </div>
+                        </a>
                         <!-- /.catalog__link -->
                     </li>
                     <!-- /.catalog__item -->
                     <li class="catalog__item">
-                        <div class="catalog__link link-catalog">
-                            <a href="#">
-                                <img width="260" height="195" src="img/catalog/photo-2-mobile.png" alt="Корзинка для белья">
-                                <h3>Корзинка для белья</h3>
-                            </a>
-                            <span>Диаметр 15 см, высота 10 см</span>
-                            <p class="link-catalog__price">
-                              <b>690 руб.</b>
-                              <button>
-                                <svg width="21" height="18" viewBox="0 0 21 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                  <path opacity="0.2" d="M20.1884 6.85716H16.6377L13.1884 0.380944C12.9855 -8.61287e-06 12.5797 -0.0952351 12.1739 0.0952412C11.7681 0.285717 11.6667 0.66667 11.8696 1.04762L15.0145 6.85716H5.7826L8.92753 1.04762C9.13043 0.66667 8.92754 0.285717 8.6232 0.0952412C8.2174 -0.0952351 7.8116 0.0952295 7.6087 0.380944L4.1594 6.85716H0.811583C0.405785 6.85716 0 7.14286 0 7.61905C0 8 0.304336 8.38094 0.811583 8.38094H1.01449L1.92753 11.2381C1.72463 11.3333 1.62317 11.5238 1.62317 11.8095C1.62317 12.1905 1.92753 12.4762 2.33332 12.4762L4.05797 18H16.942L18.6667 12.4762C19.0725 12.4762 19.3768 12.1905 19.3768 11.8095C19.3768 11.619 19.2754 11.3333 19.0725 11.2381L19.9855 8.38094H20.1884C20.5942 8.38094 21 8.09524 21 7.61905C21 7.14286 20.5942 6.85716 20.1884 6.85716ZM15.6232 16.4762H5.07247L3.85506 12.381H16.942L15.6232 16.4762ZM17.2464 10.9524H3.34782L2.53623 8.28573H18.058L17.2464 10.9524Z" fill="some-color"/>
-                                </svg>
-                              </button>
-                            </p>
+                      <a href="#" class="catalog__link link-catalog">
+                        <img width="260" height="195" src="img/catalog/photo-2-mobile.png" alt="Зайчик-попрыгайчик">
+                        <div class="link-catalog__card">
+                          <!-- /.link-catalog__card -->
+                          <h3 class="link-catalog__card-name">Корзинка для белья</h3>
+                          <span>Диаметр 15 см, высота 10 см</span>
+                          <p class="link-catalog__card-price">
+                            <b>690 руб.</b>
+                            <button>
+                              <svg width="21" height="18" viewBox="0 0 21 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path opacity="0.2" d="M20.1884 6.85716H16.6377L13.1884 0.380944C12.9855 -8.61287e-06 12.5797 -0.0952351 12.1739 0.0952412C11.7681 0.285717 11.6667 0.66667 11.8696 1.04762L15.0145 6.85716H5.7826L8.92753 1.04762C9.13043 0.66667 8.92754 0.285717 8.6232 0.0952412C8.2174 -0.0952351 7.8116 0.0952295 7.6087 0.380944L4.1594 6.85716H0.811583C0.405785 6.85716 0 7.14286 0 7.61905C0 8 0.304336 8.38094 0.811583 8.38094H1.01449L1.92753 11.2381C1.72463 11.3333 1.62317 11.5238 1.62317 11.8095C1.62317 12.1905 1.92753 12.4762 2.33332 12.4762L4.05797 18H16.942L18.6667 12.4762C19.0725 12.4762 19.3768 12.1905 19.3768 11.8095C19.3768 11.619 19.2754 11.3333 19.0725 11.2381L19.9855 8.38094H20.1884C20.5942 8.38094 21 8.09524 21 7.61905C21 7.14286 20.5942 6.85716 20.1884 6.85716ZM15.6232 16.4762H5.07247L3.85506 12.381H16.942L15.6232 16.4762ZM17.2464 10.9524H3.34782L2.53623 8.28573H18.058L17.2464 10.9524Z" fill="some-color"/>
+                              </svg>
+                            </button>
+                          </p>
                         </div>
-                        <!-- /.catalog__link -->
+                      </a>
+                      <!-- /.catalog__link -->
                     </li>
                     <!-- /.catalog__item -->
                     <li class="catalog__item">
-                        <div class="catalog__link link-catalog">
-                            <a href="#">
-                                <img width="260" height="195" src="img/catalog/photo-3-mobile.png" alt="Большая корзинка для игрушек">
-                                <h3>Большая корзинка для игрушек</h3>
-                            </a>
-                            <span>Диаметр 30 см, высота 30 см</span>
-                            <p class="link-catalog__price">
-                              <b>1 500 руб.</b>
-                              <button>
-                                <svg width="21" height="18" viewBox="0 0 21 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                  <path opacity="0.2" d="M20.1884 6.85716H16.6377L13.1884 0.380944C12.9855 -8.61287e-06 12.5797 -0.0952351 12.1739 0.0952412C11.7681 0.285717 11.6667 0.66667 11.8696 1.04762L15.0145 6.85716H5.7826L8.92753 1.04762C9.13043 0.66667 8.92754 0.285717 8.6232 0.0952412C8.2174 -0.0952351 7.8116 0.0952295 7.6087 0.380944L4.1594 6.85716H0.811583C0.405785 6.85716 0 7.14286 0 7.61905C0 8 0.304336 8.38094 0.811583 8.38094H1.01449L1.92753 11.2381C1.72463 11.3333 1.62317 11.5238 1.62317 11.8095C1.62317 12.1905 1.92753 12.4762 2.33332 12.4762L4.05797 18H16.942L18.6667 12.4762C19.0725 12.4762 19.3768 12.1905 19.3768 11.8095C19.3768 11.619 19.2754 11.3333 19.0725 11.2381L19.9855 8.38094H20.1884C20.5942 8.38094 21 8.09524 21 7.61905C21 7.14286 20.5942 6.85716 20.1884 6.85716ZM15.6232 16.4762H5.07247L3.85506 12.381H16.942L15.6232 16.4762ZM17.2464 10.9524H3.34782L2.53623 8.28573H18.058L17.2464 10.9524Z" fill="some-color"/>
-                                </svg>
-                              </button>
-                            </p>
+                      <a href="#" class="catalog__link link-catalog">
+                        <img width="260" height="195" src="img/catalog/photo-3-mobile.png" alt="Зайчик-попрыгайчик">
+                        <div class="link-catalog__card">
+                          <!-- /.link-catalog__card -->
+                          <h3 class="link-catalog__card-name">Большая корзинка для игрушек</h3>
+                          <span>Диаметр 30 см, высота 30 см</span>
+                          <p class="link-catalog__card-price">
+                            <b>1 500 руб.</b>
+                            <button>
+                              <svg width="21" height="18" viewBox="0 0 21 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path opacity="0.2" d="M20.1884 6.85716H16.6377L13.1884 0.380944C12.9855 -8.61287e-06 12.5797 -0.0952351 12.1739 0.0952412C11.7681 0.285717 11.6667 0.66667 11.8696 1.04762L15.0145 6.85716H5.7826L8.92753 1.04762C9.13043 0.66667 8.92754 0.285717 8.6232 0.0952412C8.2174 -0.0952351 7.8116 0.0952295 7.6087 0.380944L4.1594 6.85716H0.811583C0.405785 6.85716 0 7.14286 0 7.61905C0 8 0.304336 8.38094 0.811583 8.38094H1.01449L1.92753 11.2381C1.72463 11.3333 1.62317 11.5238 1.62317 11.8095C1.62317 12.1905 1.92753 12.4762 2.33332 12.4762L4.05797 18H16.942L18.6667 12.4762C19.0725 12.4762 19.3768 12.1905 19.3768 11.8095C19.3768 11.619 19.2754 11.3333 19.0725 11.2381L19.9855 8.38094H20.1884C20.5942 8.38094 21 8.09524 21 7.61905C21 7.14286 20.5942 6.85716 20.1884 6.85716ZM15.6232 16.4762H5.07247L3.85506 12.381H16.942L15.6232 16.4762ZM17.2464 10.9524H3.34782L2.53623 8.28573H18.058L17.2464 10.9524Z" fill="some-color"/>
+                              </svg>
+                            </button>
+                          </p>
                         </div>
-                        <!-- /.catalog__link -->
+                      </a>
+                      <!-- /.catalog__link -->
                     </li>
                     <!-- /.catalog__item -->
                 </ul>
@@ -148,11 +154,7 @@
                     <div class="text-production__video">
                         <img width="260" height="150" src="img/catalog/video-mobile-1.png" alt="">
                         <button>
-                            <svg width="101" height="77" viewBox="0 0 101 77" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M97.0001 18.1C97.0001 18.1 96.1001 11.1 93.2001 7.99997C89.6001 3.99997 85.5001 3.89995 83.7001 3.69995C70.4001 2.69995 50.4001 2.69995 50.4001 2.69995H50.3001C50.3001 2.69995 30.3001 2.69995 17.0001 3.69995C15.1001 3.89995 11.1001 3.99997 7.50011 7.99997C4.70011 11.1 3.7001 18.1 3.7001 18.1C3.7001 18.1 2.80011 26.3 2.80011 34.5V42.2C2.80011 50.4 3.7001 58.6 3.7001 58.6C3.7001 58.6 4.60011 65.6 7.50011 68.7C11.1001 72.7 15.9001 72.6 18.0001 73C25.6001 73.8 50.4001 74 50.4001 74C50.4001 74 70.4001 74 83.7001 73C85.6001 72.8 89.6001 72.7 93.2001 68.7C96.0001 65.6 97.0001 58.6 97.0001 58.6C97.0001 58.6 97.9001 50.4 97.9001 42.2V34.5C97.9001 26.3 97.0001 18.1 97.0001 18.1Z" fill="some-color"/>
-                                <path d="M50.3001 76.8C49.3001 76.8 25.3001 76.5 17.7001 75.8H17.6001H17.5001C17.2001 75.7 16.8001 75.7 16.4001 75.6C13.9001 75.3 9.2001 74.7 5.6001 70.6C2.2001 67 1.2001 59.8 1.1001 59C1.1001 58.7 0.100098 50.5 0.100098 42.3V34.6C0.100098 26.3 1.00011 18.2 1.00011 17.9V17.8C1.10011 17 2.20011 9.89998 5.50011 6.19998C9.50011 1.79998 14.0001 1.30001 16.2001 1.10001C16.4001 1.10001 16.6001 1.1 16.7001 1H16.8001C30.1001 0 50.1001 0 50.3001 0H50.4001C50.6001 0 70.6001 0 83.9001 1H84.0001C84.2001 1 84.3001 1.00001 84.5001 1.10001C86.7001 1.30001 91.2001 1.79998 95.2001 6.19998C98.6001 9.79998 99.6001 17 99.7001 17.8C99.7001 18.1 100.7 26.3 100.7 34.6V42.3C100.7 50.6 99.8001 58.7 99.7001 59V59.1C99.6001 59.9 98.5001 67.1 95.2001 70.7C91.2001 75.1 86.7001 75.6 84.5001 75.8C84.3001 75.8 84.1001 75.8 84.0001 75.9H83.9001C70.6001 76.8 50.5001 76.8 50.3001 76.8ZM18.4001 70.4C25.9001 71.1 49.6001 71.4 50.4001 71.4C51.1001 71.4 70.5001 71.4 83.4001 70.4C83.6001 70.4 83.8001 70.4 84.0001 70.3C85.8001 70.1 88.6001 69.8 91.2001 67C93.0001 65 94.1001 60.1 94.3001 58.4C94.4001 57.9 95.2001 50 95.2001 42.3V34.6C95.2001 26.8 94.3001 19 94.2001 18.5C93.9001 16.1 92.8001 11.7 91.1001 10C88.5001 7.1 85.7001 6.89998 83.9001 6.69998C83.7001 6.69998 83.5001 6.70001 83.3001 6.60001C70.2001 5.60001 50.5001 5.60001 50.3001 5.60001H50.2001C50.0001 5.60001 30.2001 5.60001 17.2001 6.60001C17.0001 6.60001 16.8001 6.59998 16.6001 6.69998C14.8001 6.89998 12.0001 7.2 9.40012 10C7.60012 12 6.50011 16.9 6.30011 18.6C6.20011 19.2 5.4001 27 5.4001 34.7V42.4C5.4001 50.1 6.30011 58 6.30011 58.5C6.60011 60.9 7.70012 65.3 9.40012 67C11.7001 69.6 14.7001 70 16.9001 70.3C17.5001 70.2 17.9001 70.3 18.4001 70.4Z" fill="some-color"/>
-                                <path d="M38.4004 20.5V56.2L68.2004 38.4L38.4004 20.5Z" fill="some-color"/>
-                            </svg>
+                            <img width="101" height="77" src="/img/catalog/play.svg" alt="Кнопка паузы">
                         </button>
                     </div>
                     <!-- /.text-production__video -->
@@ -193,7 +195,7 @@
                     <!-- /.footer__item -->
                 </ul>
                 <!-- /.social__list -->
-                <div class="copyright">
+                <div class="footer__copyright">
                     <b>Разработано</b>
                     <img width="27" height="34" src="img/index/htmlacademy.svg" alt="Логотип компании которая разработала сайт магазина">
                 </div>
@@ -203,5 +205,21 @@
         </footer>
     </div>
     <!-- /.container -->
+    <div class="modal__container">
+      <div class="modal">
+        <div class="modal__title block__title">Добавить <br> в корзину</div>
+        <!-- /.modal__title -->
+        <p>Выберите размер:</p>
+        <div class="modal__size">
+          <button class="modal__size--active">S</button>
+          <button>M</button>
+          <button>L</button>
+        </div>
+        <!-- /.modal__size -->
+        <button class="modal__button">Добавить</button>
+      </div>
+      <!-- /.modal -->
+    </div>
+    <!-- /.modal__container -->
 </body>
 </html>
