--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Каталог</title>
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32">
+    <link rel="icon" href="img/favicon/favicon16.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon152.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
 <body>
@@ -103,7 +106,7 @@
             <span></span>
           </div>
           <!-- /.header-menu__toggle -->
-          <div class="header-menu__dropdown header-menu__dropdown--active">
+          <div class="header-menu__dropdown">
             <ul class="header-menu__list">
               <li class="header-menu__item">
                 <a href="#">Каталог товаров</a>
@@ -226,9 +229,11 @@
                 <ul class="catalog__list">
                   <li class="catalog__item">
                     <a href="#" class="catalog__link link-catalog">
-                      <img width="260" height="195" src="img/catalog/photo-1-mobile.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-mobile">
-                      <img width="334" height="334" src="img/catalog/photo-1-tablet.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-tablet">
-                      <img width="316" height="462" src="img/catalog/photo-1-desktop.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-desktop">
+                      <picture>
+                        <source width="316" height="462" media="(min-width: 1150px)" srcset="img/catalog/photo-1-desktop.png 1x, img/catalog/photo-1-desktop@2x.png 2x">
+                        <source width="334" height="334" media="(min-width: 768px)" srcset="img/catalog/photo-1-tablet.png 1x, img/catalog/photo-1-tablet@2x.png 2x">
+                        <img width="260" height="195" src="img/catalog/photo-1-mobile.png" alt="Большая корзинка для игрушек" srcset="img/catalog/photo-1-mobile@2x.png 2x">
+                      </picture>
                       <div class="link-catalog__card">
                         <div class="link-catalog__title">
                           <h3 class="link-catalog__card-name">Зайчик-попрыгайчик</h3>
@@ -250,9 +255,11 @@
                   <!-- /.catalog__item -->
                   <li class="catalog__item">
                     <a href="#" class="catalog__link link-catalog">
-                      <img width="260" height="195" src="img/catalog/photo-2-mobile.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-mobile">
-                      <img width="334" height="334" src="img/catalog/photo-2-tablet.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-tablet">
-                      <img width="316" height="462" src="img/catalog/photo-2-desktop.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-desktop">
+                      <picture>
+                        <source width="316" height="462" media="(min-width: 1150px)" srcset="img/catalog/photo-2-desktop.png 1x, img/catalog/photo-2-desktop@2x.png 2x">
+                        <source width="334" height="334" media="(min-width: 768px)" srcset="img/catalog/photo-2-tablet.png 1x, img/catalog/photo-2-tablet@2x.png 2x">
+                        <img width="260" height="195" src="img/catalog/photo-2-mobile.png" alt="Большая корзинка для игрушек" srcset="img/catalog/photo-2-mobile@2x.png 2x">
+                      </picture>
                       <div class="link-catalog__card">
                         <!-- /.link-catalog__card -->
                         <div class="link-catalog__title">
@@ -275,9 +282,11 @@
                   <!-- /.catalog__item -->
                   <li class="catalog__item">
                     <a href="#" class="catalog__link link-catalog">
-                      <img width="260" height="195" src="img/catalog/photo-3-mobile.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-mobile">
-                      <img width="334" height="334" src="img/catalog/photo-3-tablet.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-tablet">
-                      <img width="316" height="462" src="img/catalog/photo-3-desktop.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-desktop">
+                      <picture>
+                        <source width="316" height="462" media="(min-width: 1150px)" srcset="img/catalog/photo-3-desktop.png 1x, img/catalog/photo-3-desktop@2x.png 2x">
+                        <source width="334" height="334" media="(min-width: 768px)" srcset="img/catalog/photo-3-tablet.png 1x, img/catalog/photo-3-tablet@2x.png 2x">
+                        <img width="260" height="195" src="img/catalog/photo-3-mobile.png" alt="Большая корзинка для игрушек" srcset="img/catalog/photo-3-mobile@2x.png 2x">
+                      </picture>
                       <div class="link-catalog__card">
                         <!-- /.link-catalog__card -->
                         <div class="link-catalog__title">
