--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Каталог</title>
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32">
+    <link rel="icon" href="img/favicon/favicon16.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon152.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
 <body>
@@ -226,9 +229,6 @@
                 <ul class="catalog__list">
                   <li class="catalog__item">
                     <a href="#" class="catalog__link link-catalog">
-                      <img width="260" height="195" src="img/catalog/photo-1-mobile.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-mobile">
-                      <img width="334" height="334" src="img/catalog/photo-1-tablet.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-tablet">
-                      <img width="316" height="462" src="img/catalog/photo-1-desktop.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-desktop">
                       <div class="link-catalog__card">
                         <div class="link-catalog__title">
                           <h3 class="link-catalog__card-name">Зайчик-попрыгайчик</h3>
@@ -250,9 +250,6 @@
                   <!-- /.catalog__item -->
                   <li class="catalog__item">
                     <a href="#" class="catalog__link link-catalog">
-                      <img width="260" height="195" src="img/catalog/photo-2-mobile.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-mobile">
-                      <img width="334" height="334" src="img/catalog/photo-2-tablet.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-tablet">
-                      <img width="316" height="462" src="img/catalog/photo-2-desktop.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-desktop">
                       <div class="link-catalog__card">
                         <!-- /.link-catalog__card -->
                         <div class="link-catalog__title">
@@ -275,9 +272,6 @@
                   <!-- /.catalog__item -->
                   <li class="catalog__item">
                     <a href="#" class="catalog__link link-catalog">
-                      <img width="260" height="195" src="img/catalog/photo-3-mobile.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-mobile">
-                      <img width="334" height="334" src="img/catalog/photo-3-tablet.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-tablet">
-                      <img width="316" height="462" src="img/catalog/photo-3-desktop.png" alt="Зайчик-попрыгайчик" class="link-catalog__img-desktop">
                       <div class="link-catalog__card">
                         <!-- /.link-catalog__card -->
                         <div class="link-catalog__title">
