--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Форма</title>
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32">
+    <link rel="icon" href="img/favicon/favicon16.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon152.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
 <body>
@@ -103,7 +106,6 @@
             <span></span>
           </div>
           <!-- /.header-menu__toggle -->
-          <div class="header-menu__dropdown header-menu__dropdown--active">
             <ul class="header-menu__list">
               <li class="header-menu__item">
                 <a href="catalog.html">Каталог товаров</a>
