--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Главная</title>
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32">
+    <link rel="icon" href="img/favicon/favicon16.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon152.png">
+    <!-- <link rel="manifest" href="manifest.webmanifest"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
@@ -262,17 +265,11 @@
                     </tr>
                 </table>
                 <!-- /.popular__table -->
-                <img width="260" height="315" src="img/index/triple-set-mobile.png" alt="Товар недели">
                 <div class="popular__price">
                   <span class="price">Цена: 990 руб.</span>
                   <button>заказать</button>
                 </div>
                 <!-- /.popular__price -->
-              </div>
-              <!-- /.popular-desc__text -->
-              <div class="popular-desc__img">
-                <img width="334" height="404" src="img/index/triple-set-tablet.png" alt="Товар недели" class="popular-desc__img--tablet">
-                <img width="525" height="636" src="img/index/triple-set-desktop.png" alt="Товар недели" class="popular-desc__img--desktop">
               </div>
               <!-- /.popular-desc__text -->
             </div>
