--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
           <a href="index.html" class="header__logo--mobile">
             <svg width="86" height="35">
               <use href="img/sprite.svg#logo-mobile"></use>
-            </svg> 
+            </svg>
           </a>
           <a href="index.html" class="header__logo--tablet">
             <svg width="114" height="46">
@@ -80,7 +80,7 @@
                 <a href="#">
                   <svg width="18" height="18">
                     <use href="img/sprite.svg#search"></use>
-                  </svg> 
+                  </svg>
                   Поиск по сайту
                 </a>
               </li>
@@ -251,7 +251,6 @@
           <h2 class="info__title block__title">Коротко о нас:</h2>
           <!-- /.info__title -->
           <ul class="info__list">
-            
             <li class="info__item info__item--flower">
               <svg width="33" height="38">
                 <use href="/img/sprite.svg#icon-1"></use>
@@ -327,7 +326,8 @@
             </div>
             <!-- /.reviews__arrows -->
           </div>
-          <!-- /.reviews__user --> <a href="#" class="reviews__button">Написать</a>
+          <!-- /.reviews__user -->
+          <a href="#" class="reviews__button">Написать</a>
         </div>
         <!-- /.reviews -->
         <div class="zigzag-line">
