--- a/source/form.html
+++ b/source/form.html
@@ -90,47 +90,6 @@
             </ul>
           </div>
           <!-- /.header-menu--tablet -->
-          <div class="header__menu header-menu header-menu--mobile header-menu--hidden">
-            <div class="header-menu__toggle">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-            <!-- /.header-menu__toggle -->
-            <div class="header-menu__dropdown">
-              <ul class="header-menu__list">
-                <li class="header-menu__item">
-                  <a href="catalog.html">Каталог товаров</a>
-                </li>
-                <li class="header-menu__item">
-                  <a href="#">Вязание на заказ</a>
-                </li>
-                <li class="header-menu__item">
-                  <a href="#">
-                    <svg width="18" height="18">
-                      <use href="img/sprite.svg#search"></use>
-                    </svg>
-                    Поиск по сайту
-                  </a>
-                </li>
-                <a href="/" class="header-menu__logo--tablet">
-                  <svg width="86" height="35">
-                    <use href="img/sprite.svg#logo-mobile"></use>
-                  </svg>
-                </a>
-                <li class="header-menu__item">
-                  <a href="#">
-                    <svg width="21" height="18">
-                      <use href="img/sprite.svg#cart"></use>
-                    </svg>
-                    Корзина: пока пуста
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <!-- /.header-menu__dropdown -->
-          </div>
-          <!-- /.header-menu--mobile Меню без JS'а-->
           <div class="header__menu header-menu header-menu--visible">
             <ul class="header-menu__list header-menu__list-visible">
               <li class="header-menu__item">
@@ -387,7 +346,7 @@
                 <!-- /.form__filter filter-form -->
                 <fieldset class="form__filter filter-form">
                   <div class="filter-form__title"><span>E-mail</span>
-                    <hr>
+                    <hr class="mail">
                   </div>
                   <label class="filter-form__input">
                     <input type="email" placeholder="Ваш Email*" name="email" id="email">
@@ -399,7 +358,7 @@
                 <!-- /.form__filter filter-form -->
               </div>
               <!-- /.filter-form--grey -->
-              <fieldset class="form__filter filter-form">
+              <fieldset class="form__filter filter-form filter-form--textarea">
                 <div class="filter-form__title">
                   <span>Доп</span>
                   <hr>
