--- a/source/index.html
+++ b/source/index.html
@@ -200,7 +200,7 @@
           <!-- /.popular__title -->
           <div class="popular__desc popular-desc">
             <div class="popular-desc__text">
-              <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх размерах.</p>
+              <p>Экологически чистая пряжа, <br> ручная работа. Доступны в шести <br> расцветках и трёх размерах.</p>
               <table class="popular__table">
                 <tr>
                   <td>Цвет:</td>
@@ -303,7 +303,10 @@
             <a href="#" class="reviews__button">Написать</a>
           </div>
           <!-- /.reviews__title -->
-          <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+          <p>
+            <span class="reviews__text reviews__text--mobile">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как <br> у популярных инстамамочек. <br> В отчаянии, я накупила аксессуаров и игрушек в Мишке, <br> и мои фотографии сразу стали более стильными, а также набирают больше лайков!</span>
+            <span class="reviews__text reviews__text--tablet">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</span>
+          </p>
           <div class="reviews__user reviews-user">
             <div class="reviews-user__info">
               <b>Анастасия Красильникова</b>
@@ -357,7 +360,7 @@
               </tr>
               <tr>
                 <td>адрес:</td>
-                <td>г. Санкт-Петербург<br>ул. Большая Конюшеннаяд.<br>19/8, офис 101</td>
+                <td>г. Санкт-Петербург<br>ул. Большая Конюшенная д. 19/8, офис 101</td>
               </tr>
             </table>
             <!-- /.popular__table -->
