--- a/source/catalog.html
+++ b/source/catalog.html
@@ -103,7 +103,7 @@
           <!-- /.main__title--background-grey -->
           <div class="zigzag-fill">
             <svg width="1150px" height="34px" class="zigzag-fill--desktop">
-              <use href="/img/sprite.svg#zigzag-fill-desktop-catalog"></use>
+              <use href="/img/sprite.svg#zigzag-fill-desktop"></use>
             </svg>
             <svg width="768" height="24" class="zigzag-fill--tablet">
               <use href="/img/sprite.svg#zigzag-fill-tablet"></use>
