--- a/source/index.html
+++ b/source/index.html
@@ -321,7 +321,7 @@
           <div class="footer__logo">
             <a href="index.html">
               <svg width="102" height="34">
-                <use href="img/sprite.svg#footer-logo"></use>
+                <use href="img/sprite.svg#logo-footer"></use>
               </svg>
             </a>
           </div>
