--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,7 +63,6 @@
                 <span class="bottom-sale__delivery">Бесплатная доставка по России</span>
               </div>
               <!-- /.main-nav__bottom-sale -->
-              
             </div>
             <!-- /.main-nav__bottom -->
             <ul class="main-nav__list user-list">
@@ -103,7 +102,7 @@
           <!-- /.main__title--background-grey -->
           <div class="zigzag-fill">
             <svg width="1150px" height="34px" class="zigzag-fill--desktop">
-              <use href="/img/sprite.svg#zigzag-fill-desktop-catalog"></use>
+              <use href="/img/sprite.svg#zigzag-fill-desktop"></use>
             </svg>
             <svg width="768" height="24" class="zigzag-fill--tablet">
               <use href="/img/sprite.svg#zigzag-fill-tablet"></use>
