--- a/source/catalog.html
+++ b/source/catalog.html
@@ -252,7 +252,7 @@
           <div class="footer__logo">
             <a href="index.html">
               <svg width="102" height="34">
-                <use href="img/sprite.svg#footer-logo"></use>
+                <use href="img/sprite.svg#logo-footer"></use>
               </svg>
             </a>
           </div>
