--- a/source/index.html
+++ b/source/index.html
@@ -367,27 +367,34 @@
       </footer>
     </div>
     <!-- /.container -->
-    <div class="modal__container">
+    <div class="modal__container modal--active">
       <div class="modal">
         <form action="https://echo.htmlacademy.ru/">
-          <div class="modal__title">Добавить в корзину</div>
-          <!-- /.modal__title -->
-          <p>Выберите размер:</p>
-          <div class="modal__size">
-            <label class="modal__size-button">
-              <input type="radio" name="product-size" value="s" checked>
-              <span>s</span>
-            </label>
-            <label class="modal__size-button">
-              <input type="radio" name="product-size" value="m">
-              <span class="modal__size-button">m</span>
-            </label>
-            <label class="modal__size-button">
-              <input type="radio" name="product-size" value="l">
-              <span class="modal__size-button">l</span>
-            </label>
+          <div class="modal__title">
+            <span>Добавить в корзину</span>
+            <p>Выберите размер:</p>
           </div>
-          <!-- /.modal__size -->
+          <!-- /.modal__title -->
+          <fieldset class="modal__form modal-form">
+            <div class="modal-form__list">
+              <label class="modal-form__input">
+                <input type="radio" name="product-size" value="s" checked>
+                <button type="button" class="modal-form__button-radio">s</button>
+              </label>
+              <!-- /.filter-form__input -->
+              <label class="modal-form__input">
+                <input type="radio" name="product-size" value="m">
+                <button type="button" class="modal-form__button-radio">m</button>
+              </label>
+              <!-- /.filter-form__input -->
+              <label class="modal-form__input">
+                <input type="radio" name="product-size" value="l">
+                <button type="button" class="modal-form__button-radio">l</button>
+              </label>
+              <!-- /.filter-form__input -->
+            </div>
+            <!-- /.filter-form__list -->
+          </fieldset>
           <button type="submit" class="modal__button">Добавить</button>
         </form>
       </div>
