--- a/source/index.html
+++ b/source/index.html
@@ -367,7 +367,7 @@
       </footer>
     </div>
     <!-- /.container -->
-    <div class="modal__container">
+    <div class="modal__container modal--active">
       <div class="modal">
         <form action="https://echo.htmlacademy.ru/">
           <div class="modal__title">Добавить в корзину</div>
