Правки модальное окно

--- a/source/index.html
+++ b/source/index.html
@@ -379,17 +379,17 @@
             <div class="modal-form__list">
               <label class="modal-form__input">
                 <input type="radio" name="product-size" value="s" checked>
-                <button type="button" class="modal-form__button-radio">s</button>
+                <span class="modal-form__button-radio modal-form__button-radio--first"></span>
               </label>
               <!-- /.filter-form__input -->
               <label class="modal-form__input">
                 <input type="radio" name="product-size" value="m">
-                <button type="button" class="modal-form__button-radio">m</button>
+                <span class="modal-form__button-radio modal-form__button-radio--second"></span>
               </label>
               <!-- /.filter-form__input -->
               <label class="modal-form__input">
                 <input type="radio" name="product-size" value="l">
-                <button type="button" class="modal-form__button-radio">l</button>
+                <span class="modal-form__button-radio modal-form__button-radio--third"></span>
               </label>
               <!-- /.filter-form__input -->
             </div>
